--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -21,7 +19,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                         <a class="nav-link" href="#">Bootstrap 1</a>
+                         <a class="nav-link1" href="../JavaScript-Libraries-and-Frameworks/bootstrap-travel.html">Bootstrap Travel</a>
                         </li>
                         <li class="nav-item">
                          <a class="nav-link" href="#">Bootstrap 2</a>
@@ -50,7 +48,7 @@
          <div class="row"></div>
             <div class="col">
                 <ul>
-                    <li>Assignment 1</li>
+                    <li id="nav-link1"><a class="nav-link1" href="../JavaScript-Libraries-and-Frameworks/bootstrap-travel.html">Bootstrap Travel</a></li>
                     <li>Assignment 2</li>
                     <li>Assignment 3</li>
                 </ul>
