--- a/bootstrap-travel.html
+++ b/bootstrap-travel.html
@@ -11,7 +11,7 @@
 <!--Nav bar-->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="../Screenshot 2025-09-18 093014.png" alt="logo" width="80"></a>
+    <a class="navbar-brand" href="#"><img src="../img/hawaiilogo.png" alt="logo" width="80"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -47,16 +47,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../pexels-florian-suss-269098632-14705133.jpg" class="d-block w-100" alt="akaka falls">
+      <img src="../img/" class="d-block w-100" alt="akaka falls">
     </div>
     <div class="carousel-item">
-      <img src="../pexels-jess-vide-4784464.jpg" class="d-block w-100" alt="lanikai beach">
+      <img src="../img/lanikai.jpg" class="d-block w-100" alt="lanikai beach">
     </div>
     <div class="carousel-item">
-      <img src="../pexels-lastly-412681.jpg" class="d-block w-100" alt="Moana beach">
+      <img src="../img/maoanabeach.jpg" class="d-block w-100" alt="Moana beach">
     </div>
      <div class="carousel-item">
-      <img src="../pexels-timmossholder-20608403.jpg class="d-block w-100 alt="Pearl Harbor">
+      <img src="../img/pearlharbor.jpg"d-block w-100 alt="Pearl Harbor">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -83,7 +83,7 @@
             <div class="col">
                 <!--Card 1-->
                 <div class="card"> 
-                    <img src="../JavaScript-Libraries-and-Frameworks/images/pexels-florian-suss-269098632-14705133.jpg" class="card-img-top" alt="akaka falls">
+                    <img src="../img/akakafalls.jpg" class="card-img-top" alt="akaka falls">
                     <div class="card-body">
                         <h5 class="card-title">Akaka Falls</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
@@ -93,7 +93,7 @@
             </div>
             <div class="col">
                 <!--Card 2-->
-                <div class="card"> <img src="../JavaScript-Libraries-and-Frameworks/images/pexels-jess-vide-4784464.jpg" class="card-img-top" alt="lanikai beach">
+                <div class="card"> <img src="../img/lanikai.jpg" class="card-img-top" alt="lanikai beach">
                     <div class="card-body">
                         <h5 class="card-title">Lanikai Beach</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="col">
                 <!--Card 3-->
-                <div class="card"> <img src="../JavaScript-Libraries-and-Frameworks/images/pexels-lastly-412681.jpg" class="card-img-top" alt="moana beach">
+                <div class="card"> <img src="../img/maoanabeach.jpg" class="card-img-top" alt="moana beach">
                     <div class="card-body">
                         <h5 class="card-title">Moana Beach</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
@@ -111,17 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <!--Card 4-->
-                <div class="card"> <img src="../JavaScript-Libraries-and-Frameworks/images/pexels-timmossholder-20608403.jpg" class="card-img-top" alt="pearl Harbor">
-                    <div class="card-body">
-                        <h5 class="card-title">Pearl Harbor Memorial</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-                                <a href="#" class="btn btn-primary">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+          </div>
 </div>
 
 <!--end of container-->
@@ -171,7 +161,7 @@
         </div>
 
         <h2 class="fs-1 p-5 mt-5 mb-5 text-center">RELAX IN BEAUTIFUL HAWAII</h2>       
-        <img src="../pexels-jess-vide-4784464.jpg" alt="lanikai beach" class="w-100 mb-5">     
+        <img src="../JavaScript-Libraries-and-Frameworks/images/pexels-jess-vide-4784464.jpg" alt="lanikai beach" class="w-100 mb-5">     
 
         <footer class="bg-dark mt-5 p-5 text-white text-center">
             <p>&copy; Tour Hawaii Today</p>
