added akakafalls photos to carasol

--- a/bootstrap-travel.html
+++ b/bootstrap-travel.html
@@ -47,7 +47,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../img/" class="d-block w-100" alt="akaka falls">
+      <img src="../img/akakafalls.jpg" class="d-block w-100" alt="akaka falls">
     </div>
     <div class="carousel-item">
       <img src="../img/lanikai.jpg" class="d-block w-100" alt="lanikai beach">
