--- a/index.html
+++ b/index.html
@@ -4,61 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Javascript Libraries and Frameworks</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+       
+     <link href="style.css" rel="stylesheet">
+
+     <!--Tailwind start-->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> 
+
+    <!--Tailwind End-->
 
     </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">JayDoo</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                         <a class="nav-link1" href="../JavaScript-Libraries-and-Frameworks/bootstrap-travel.html">Bootstrap Travel</a>
-                        </li>
-                        <li class="nav-item">
-                         <a class="nav-link" href="#">Bootstrap 2</a>
-                        </li>
-                        <li class="nav-item">
-                         <a class="nav-link" href="#">Bootstrap 3</a>
-                        </li>
-                    </ul>
-                </div>
-        </div>
-    </nav>
+    <div class="mx-8 my-8">
 
-    <div class="container maincontainer">
-        <div class="row">
-            <div class="col-6">
-                <h1>Javascript Libraries and Frameworks</h1>
-                <h2>JayDoo Vang</h2>
-            </div>
-            <div class="col">
-            Column
-            </div>
-            <div class="col">
-            Column
-            </div>
-         </div>
-         <div class="row"></div>
-            <div class="col">
-                <ul>
-                    <li id="nav-link1"><a class="nav-link1" href="../JavaScript-Libraries-and-Frameworks/bootstrap-travel.html">Bootstrap Travel</a></li>
-                    <li>Assignment 2</li>
-                    <li>Assignment 3</li>
-                </ul>
-            </div>
-    </div>
 
     
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
- 
+    <h1 class="text-7xl text-indigo-200">Javascript Libraries and Frameworks</h1>
+    <h2 class="text-5xl text-purple-400">JayDoo Vang</h2>
+
+        <ul class="list-disc list-inside">
+            <li><a class="underline text-blue-500" href="bootstrap-travel.html">Bootstrap Travel Page</a></li>
+            <li>Assignment 2</li>
+            <li>Assignment 3</li>
+        </ul>
+    </div>
   </body>
 </html>
 
