added chopsic font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
     <!--Tailwind End-->
 
+    <!--Font style start-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--Font style end-->
+
+    <link href="style.css" rel="stylesheet">
+
     </head>
   <body>
 
@@ -21,10 +29,10 @@
     
 
     <h1 class="text-7xl text-indigo-200">Javascript Libraries and Frameworks</h1>
-    <h2 class="text-5xl text-purple-400">JayDoo Vang</h2>
+    <h2 class="text-5xl text-purple-400 exo-text">JayDoo Vang</h2>
 
         <ul class="list-disc list-inside">
-            <li><a class="underline text-blue-500" href="bootstrap-travel.html">Bootstrap Travel Page</a></li>
+            <li><a class="underline text-blue-500 exo-text" href="bootstrap-travel.html">Bootstrap Travel Page</a></li>
             <li>Assignment 2</li>
             <li>Assignment 3</li>
         </ul>
