--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <ul class="list-disc list-inside">
             <li><a class="underline text-blue-500 exo-text" href="bootstrap-travel.html">Bootstrap Travel Page</a></li>
-            <li>Assignment 2</li>
+            <li><a class="underline text-blue-500 exo-text" href="slideshow.html">Slideshow</a></li>
             <li>Assignment 3</li>
         </ul>
     </div>
